# XerxesAdminPanel

./: .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile  xerxes_backend
.cargo/: config.toml
change_logs/: 2026-04-01.txt  2026-04-22.txt  2026-04-30.txt  2026-05-03.txt  HOW_TO_RUN_WINDOWS.txt
docs/: COMMAND_WRAPPER.md
include/: docker_manager.h  network_config.h  router.h  system_ops.h  utils.h
legacy/: README.md  Vagrantfile
public/: app.js  containers.json  index.html  lang.json  styles.css
public/docker/html/: index.html
src/: docker_manager.cpp  main.cpp  main.rs  network_config.cpp  router.cpp  system_ops.cpp  utils.cpp
tests/: test_utils.cpp
