[package]
name = "xerxes_admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
# The web framework (handles routing and HTTP requests)
axum = "0.7"
# The async runtime (allows the server to handle requests without freezing)
tokio = { version = "1.36", features = ["full"] }
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"